

Brushed up the Look and feel Plugin;
  - Updated JGoodies Looks to version 2.5.3
  - Made JGoodies Windows look and feel available (Windows only)
  - Fixed several bugs which makes more Look and feels available
  NOTE: Some Look and Feels may cause performance or even functional problems.
        If you think you are seeing such problems switch to a Metal Look and Feel.


Bug fixes:

Copying table rows to new window sometimes didn't work because of UI update problems.
  Concerned table's right mouse menu items "Copy selected rows to new window" and "Copy colored rows to new window".

When a SQL result tab was moved to a new window, sums and row/column counts were not available.

Paste history (ctrl +shift + v or insert) didn't work when copy as Rich Text Format was checked.
  See menu File -> New Session Properties -> tab Syntax -> checkbox "Copy shortcuts use Rich Text Format".

#1444 Save and close dialogs: The "how to switch back on" information of the "Don't show again" checkbox
   is now accessible by a small information button.

When a "SQL Worksheet" was moved to an extra window
  several functions (first and foremost editing) in SQuirreL's main window didn't work anymore.

Fixed occasional visual cut inside "Executing SQL" tab (displayed prior to SQL Result tab) as mentioned in comment of bug #1421 on 2020-07-12.

#1443 Windows: Saving SQL script or file export to filename containing colon claims success but uses part of file name only.

Merge request #54: MS Windows: Maximized state of the main window wasn't restored properly if showing on a secondary monitor
  Thanks to Stanimir Stamenkov for the patch.

Session coloring: Checkbox for status bar coloring didn't work.
  Note: Session coloring can be adjusted by right click on Alias --> Alias Properties --> tab Color

Change tracking: Improved right gutter to vertical scrollbar synchronization.

#1441 Look and Feel (L&F) Plugin: Extra LaFs not shown