@@ -18,70 +18,49 @@
  */
 package net.sourceforge.squirrel_sql.fw.dialects;
 
-import java.sql.Types;
-
+import net.sourceforge.squirrel_sql.fw.util.log.ILogger;
+import net.sourceforge.squirrel_sql.fw.util.log.LoggerController;
 import org.hibernate.HibernateException;
-import org.hibernate.dialect.Dialect;
 
-public class GenericDialectExt extends CommonHibernateDialect
+/**
+ * Do not remove final to inherit from this class. Look at {@link SQLiteDialectExt} for an example
+ */
+public final class GenericDialectExt extends CommonHibernateDialect
 {
+	private final static ILogger s_log = LoggerController.createLogger(GenericDialectExt.class);
 
-	private class GenericDialectHelper extends Dialect
-	{
-		public GenericDialectHelper()
-		{
-			registerColumnType(Types.BIGINT, "integer");
-			registerColumnType(Types.CHAR, "char($l)");
-			registerColumnType(Types.DATE, "date");
-			registerColumnType(Types.INTEGER, "integer");
-			registerColumnType(Types.LONGVARCHAR, "varchar($l)");
-			registerColumnType(Types.SMALLINT, "integer");
-			registerColumnType(Types.TIME, "time");
-			registerColumnType(Types.TIMESTAMP, "timestamp");
-			registerColumnType(Types.TINYINT, "integer");
-			registerColumnType(Types.VARCHAR, "varchar($l)");
-		}
-	}
-
-	/** extended hibernate dialect used in this wrapper */
 	private GenericDialectHelper _dialect = new GenericDialectHelper();
 
-	/**
-	 * @see net.sourceforge.squirrel_sql.fw.dialects.CommonHibernateDialect#getTypeName(int, int, int, int)
-	 */
 	@Override
 	public String getTypeName(int code, int length, int precision, int scale) throws HibernateException
 	{
 		return _dialect.getTypeName(code, length, precision, scale);
 	}
 	
-	/**
-	 * @see net.sourceforge.squirrel_sql.fw.dialects.CommonHibernateDialect#getDisplayName()
-	 */
 	@Override
 	public String getDisplayName()
 	{
 		return "Generic";
 	}
 
-	/**
-	 * @see net.sourceforge.squirrel_sql.fw.dialects.CommonHibernateDialect#getDialectType()
-	 */
 	@Override
 	public DialectType getDialectType()
 	{
+		// A fallback if this class is tried to make non final.
+		if (false == GenericDialectExt.class.equals(this.getClass()))
+		{
+			s_log.error(new IllegalStateException("Classes derived from " + GenericDialectExt.class.getName() + " must implement getDialectType()."));
+		}
+
 		return DialectType.GENERIC;
 	}
 
 	/**
-	 * @see net.sourceforge.squirrel_sql.fw.dialects.CommonHibernateDialect#supportsProduct(java.lang.String, java.lang.String)
+	 * No other implementation of {@link CommonHibernateDialect} is supposed to without checks return true;
 	 */
 	@Override
 	public boolean supportsProduct(String databaseProductName, String databaseProductVersion)
 	{
 		return true;
 	}
-	
-	
-	
 }
